showing ar view but scale is blown out

--- a/.settings/com.appcelerator.titanium.mobile.prefs
+++ b/.settings/com.appcelerator.titanium.mobile.prefs
@@ -10,7 +10,7 @@ android/sdk_version=Android 4.2.2
 eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=true
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=parmavision
-iosLaunchConfigurationAttributes/appid=com.gameshape.parmavision
+iosLaunchConfigurationAttributes/appid=com.beuckman.arview.example
 iosLaunchConfigurationAttributes/certificate=Joseph Beuckman (J556MHK866)
 iosLaunchConfigurationAttributes/keychain=
 iosLaunchConfigurationAttributes/sdk_version=6.1
