changing demo to cardinal direction pois

--- a/.settings/com.appcelerator.titanium.core.prefs
+++ b/.settings/com.appcelerator.titanium.core.prefs
@@ -1,22 +1,118 @@
 eclipse.preferences.version=1
+provisioning_profiles/adhoc/0CBA919C-DE57-4C48-862B-C040F18BDCE9/appid=com.outback.offer365preview
+provisioning_profiles/adhoc/0CBA919C-DE57-4C48-862B-C040F18BDCE9/name=365 Previewer
+provisioning_profiles/adhoc/0CBA919C-DE57-4C48-862B-C040F18BDCE9/uuid=0CBA919C-DE57-4C48-862B-C040F18BDCE9
+provisioning_profiles/adhoc/24238B8A-869C-42B0-9301-833BC325A1CA/appid=com.mmmobileapps.matchbook
+provisioning_profiles/adhoc/24238B8A-869C-42B0-9301-833BC325A1CA/name=Matchbook Ad Hoc
+provisioning_profiles/adhoc/24238B8A-869C-42B0-9301-833BC325A1CA/uuid=24238B8A-869C-42B0-9301-833BC325A1CA
+provisioning_profiles/adhoc/25B10733-91C1-48B1-9F7F-D22D70A5E5C3/appid=com.beuckman.busdata
+provisioning_profiles/adhoc/25B10733-91C1-48B1-9F7F-D22D70A5E5C3/name=Bus Data Distro
+provisioning_profiles/adhoc/25B10733-91C1-48B1-9F7F-D22D70A5E5C3/uuid=25B10733-91C1-48B1-9F7F-D22D70A5E5C3
+provisioning_profiles/adhoc/28A7C6D0-0BA7-4EA6-8E14-FEC72DA87FE8/appid=com.mmmobileapps.Mighty-Match
+provisioning_profiles/adhoc/28A7C6D0-0BA7-4EA6-8E14-FEC72DA87FE8/name=Mighty Match Distribution
+provisioning_profiles/adhoc/28A7C6D0-0BA7-4EA6-8E14-FEC72DA87FE8/uuid=28A7C6D0-0BA7-4EA6-8E14-FEC72DA87FE8
+provisioning_profiles/adhoc/2E5E352B-6F32-4016-9987-72408D04301A/appid=com.dombik.fivesomewhere
+provisioning_profiles/adhoc/2E5E352B-6F32-4016-9987-72408D04301A/name=5 Somewhere Distro
+provisioning_profiles/adhoc/2E5E352B-6F32-4016-9987-72408D04301A/uuid=2E5E352B-6F32-4016-9987-72408D04301A
+provisioning_profiles/adhoc/42CA87A2-1996-4250-88CB-DE207F29120D/appid=com.mmmobileapps.Mighty-Match
+provisioning_profiles/adhoc/42CA87A2-1996-4250-88CB-DE207F29120D/name=Mighty Match Distribution
+provisioning_profiles/adhoc/42CA87A2-1996-4250-88CB-DE207F29120D/uuid=42CA87A2-1996-4250-88CB-DE207F29120D
+provisioning_profiles/adhoc/45A02921-53B8-4490-8B1C-53C9FDC97651/appid=com.honeydew.*
+provisioning_profiles/adhoc/45A02921-53B8-4490-8B1C-53C9FDC97651/name=Honeydew Ad Hoc
+provisioning_profiles/adhoc/45A02921-53B8-4490-8B1C-53C9FDC97651/uuid=45A02921-53B8-4490-8B1C-53C9FDC97651
+provisioning_profiles/adhoc/5EED2576-484D-45D6-8C35-051597BA0F60/appid=com.mmmobileapps.matchbook
+provisioning_profiles/adhoc/5EED2576-484D-45D6-8C35-051597BA0F60/name=Matchbook Distro
+provisioning_profiles/adhoc/5EED2576-484D-45D6-8C35-051597BA0F60/uuid=5EED2576-484D-45D6-8C35-051597BA0F60
+provisioning_profiles/adhoc/67688023-3F06-4AEA-ACBF-E10787651323/appid=com.beuckman.cue-face
+provisioning_profiles/adhoc/67688023-3F06-4AEA-ACBF-E10787651323/name=Cue Face Ad Hoc
+provisioning_profiles/adhoc/67688023-3F06-4AEA-ACBF-E10787651323/uuid=67688023-3F06-4AEA-ACBF-E10787651323
+provisioning_profiles/adhoc/85D33360-E462-4F5D-923D-B3A3F6722CC3/appid=com.outback.outback365
+provisioning_profiles/adhoc/85D33360-E462-4F5D-923D-B3A3F6722CC3/name=Outback Outback 365 Ad Hoc
+provisioning_profiles/adhoc/85D33360-E462-4F5D-923D-B3A3F6722CC3/uuid=85D33360-E462-4F5D-923D-B3A3F6722CC3
+provisioning_profiles/adhoc/989753B2-4E5F-4004-B2B1-98886FC50AF9/appid=com.beuckman.busdata
+provisioning_profiles/adhoc/989753B2-4E5F-4004-B2B1-98886FC50AF9/name=Bus Data Distro
+provisioning_profiles/adhoc/989753B2-4E5F-4004-B2B1-98886FC50AF9/uuid=989753B2-4E5F-4004-B2B1-98886FC50AF9
+provisioning_profiles/adhoc/D9D16518-BACC-4A38-975C-D094B3D7997A/appid=com.beuckman.busdata
+provisioning_profiles/adhoc/D9D16518-BACC-4A38-975C-D094B3D7997A/name=Bus Data Ad Hoc
+provisioning_profiles/adhoc/D9D16518-BACC-4A38-975C-D094B3D7997A/uuid=D9D16518-BACC-4A38-975C-D094B3D7997A
+provisioning_profiles/development/01BD5117-7DC3-4A37-A60D-72A243F4802C/appid=*
+provisioning_profiles/development/01BD5117-7DC3-4A37-A60D-72A243F4802C/name=iOS Team Provisioning Profile\: iOS Wildcard App ID
+provisioning_profiles/development/01BD5117-7DC3-4A37-A60D-72A243F4802C/uuid=01BD5117-7DC3-4A37-A60D-72A243F4802C
+provisioning_profiles/development/08748841-EAC3-4EFB-A33D-5700E5EC8834/appid=*
+provisioning_profiles/development/08748841-EAC3-4EFB-A33D-5700E5EC8834/name=JB Wildcard
+provisioning_profiles/development/08748841-EAC3-4EFB-A33D-5700E5EC8834/uuid=08748841-EAC3-4EFB-A33D-5700E5EC8834
+provisioning_profiles/development/11EFBAED-B51D-46E5-A987-B860BA44FF8C/appid=*
+provisioning_profiles/development/11EFBAED-B51D-46E5-A987-B860BA44FF8C/name=iOS Team Provisioning Profile\: *
+provisioning_profiles/development/11EFBAED-B51D-46E5-A987-B860BA44FF8C/uuid=11EFBAED-B51D-46E5-A987-B860BA44FF8C
+provisioning_profiles/development/1B1D881F-A121-4FB9-888E-C4BA04A36FC8/appid=*
+provisioning_profiles/development/1B1D881F-A121-4FB9-888E-C4BA04A36FC8/name=iOS Team Provisioning Profile\: iOS Wildcard App ID
+provisioning_profiles/development/1B1D881F-A121-4FB9-888E-C4BA04A36FC8/uuid=1B1D881F-A121-4FB9-888E-C4BA04A36FC8
 provisioning_profiles/development/4ECC013B-18FB-40A8-9104-39477F6D13F5/appid=com.beuckman.busdata
 provisioning_profiles/development/4ECC013B-18FB-40A8-9104-39477F6D13F5/name=Bus Data Dev
 provisioning_profiles/development/4ECC013B-18FB-40A8-9104-39477F6D13F5/uuid=4ECC013B-18FB-40A8-9104-39477F6D13F5
+provisioning_profiles/development/5AD18F77-8A06-42DF-87E1-DA34D07EB1FD/appid=*
+provisioning_profiles/development/5AD18F77-8A06-42DF-87E1-DA34D07EB1FD/name=iOS Team Provisioning Profile\: *
+provisioning_profiles/development/5AD18F77-8A06-42DF-87E1-DA34D07EB1FD/uuid=5AD18F77-8A06-42DF-87E1-DA34D07EB1FD
+provisioning_profiles/development/6EEE3522-A900-478A-9EA7-54209D93C177/appid=com.usbank.mip.merchant.joe
+provisioning_profiles/development/6EEE3522-A900-478A-9EA7-54209D93C177/name=MIP Merchant PP
+provisioning_profiles/development/6EEE3522-A900-478A-9EA7-54209D93C177/uuid=6EEE3522-A900-478A-9EA7-54209D93C177
+provisioning_profiles/development/7770C451-578A-4F28-AA16-506412F021DF/appid=*
+provisioning_profiles/development/7770C451-578A-4F28-AA16-506412F021DF/name=iOS Team Provisioning Profile\: *
+provisioning_profiles/development/7770C451-578A-4F28-AA16-506412F021DF/uuid=7770C451-578A-4F28-AA16-506412F021DF
 provisioning_profiles/development/777603C1-D303-4D67-9BD4-70CD51F7291A/appid=com.usbank.mip.kwallet
 provisioning_profiles/development/777603C1-D303-4D67-9BD4-70CD51F7291A/name=K Wallet Dev
 provisioning_profiles/development/777603C1-D303-4D67-9BD4-70CD51F7291A/uuid=777603C1-D303-4D67-9BD4-70CD51F7291A
+provisioning_profiles/development/7FD94636-AE78-4D7F-BB18-481E402039BD/appid=*
+provisioning_profiles/development/7FD94636-AE78-4D7F-BB18-481E402039BD/name=iOS Team Provisioning Profile\: *
+provisioning_profiles/development/7FD94636-AE78-4D7F-BB18-481E402039BD/uuid=7FD94636-AE78-4D7F-BB18-481E402039BD
+provisioning_profiles/development/8E66EF29-9331-4074-B3B7-97E5C9BE106D/appid=com.usbank.mip.merchant.joe
+provisioning_profiles/development/8E66EF29-9331-4074-B3B7-97E5C9BE106D/name=MIP Merchant PP
+provisioning_profiles/development/8E66EF29-9331-4074-B3B7-97E5C9BE106D/uuid=8E66EF29-9331-4074-B3B7-97E5C9BE106D
 provisioning_profiles/development/92F0807A-2F23-4A89-AD3D-0A147220AB35/appid=com.usbank.mip.purchaser
 provisioning_profiles/development/92F0807A-2F23-4A89-AD3D-0A147220AB35/name=USBank MIP Purchaser
 provisioning_profiles/development/92F0807A-2F23-4A89-AD3D-0A147220AB35/uuid=92F0807A-2F23-4A89-AD3D-0A147220AB35
+provisioning_profiles/development/9447DC7B-8327-4DA9-A996-B0098CD468BC/appid=*
+provisioning_profiles/development/9447DC7B-8327-4DA9-A996-B0098CD468BC/name=Joe at US Bank
+provisioning_profiles/development/9447DC7B-8327-4DA9-A996-B0098CD468BC/uuid=9447DC7B-8327-4DA9-A996-B0098CD468BC
+provisioning_profiles/development/A00941E5-7EEF-4F16-8E12-B2F83F15AC79/appid=com.beuckman.busdata
+provisioning_profiles/development/A00941E5-7EEF-4F16-8E12-B2F83F15AC79/name=Bus Data Dev
+provisioning_profiles/development/A00941E5-7EEF-4F16-8E12-B2F83F15AC79/uuid=A00941E5-7EEF-4F16-8E12-B2F83F15AC79
+provisioning_profiles/development/A2F32D3B-F093-4A40-8405-D7FF37BE6047/appid=com.beuckman.outback365
+provisioning_profiles/development/A2F32D3B-F093-4A40-8405-D7FF37BE6047/name=Outback 365 Dev
+provisioning_profiles/development/A2F32D3B-F093-4A40-8405-D7FF37BE6047/uuid=A2F32D3B-F093-4A40-8405-D7FF37BE6047
 provisioning_profiles/development/A9FEF62B-2E1A-42AD-984C-9E5EE2DB8368/appid=com.dombik.fivesomewhere
 provisioning_profiles/development/A9FEF62B-2E1A-42AD-984C-9E5EE2DB8368/name=5 Somewhere
 provisioning_profiles/development/A9FEF62B-2E1A-42AD-984C-9E5EE2DB8368/uuid=A9FEF62B-2E1A-42AD-984C-9E5EE2DB8368
+provisioning_profiles/development/B219E799-1AC3-47B0-8B69-CE0EED8F97AA/appid=*
+provisioning_profiles/development/B219E799-1AC3-47B0-8B69-CE0EED8F97AA/name=iOS Team Provisioning Profile\: *
+provisioning_profiles/development/B219E799-1AC3-47B0-8B69-CE0EED8F97AA/uuid=B219E799-1AC3-47B0-8B69-CE0EED8F97AA
+provisioning_profiles/development/C96F681C-B52F-4BD3-9026-9B2C8C0E4C17/appid=com.usbank.mip.merchant.joe
+provisioning_profiles/development/C96F681C-B52F-4BD3-9026-9B2C8C0E4C17/name=MIP Merchant PP
+provisioning_profiles/development/C96F681C-B52F-4BD3-9026-9B2C8C0E4C17/uuid=C96F681C-B52F-4BD3-9026-9B2C8C0E4C17
+provisioning_profiles/development/CE1CBD40-AE3D-45D8-A9C1-C1AACA5EFA60/appid=*
+provisioning_profiles/development/CE1CBD40-AE3D-45D8-A9C1-C1AACA5EFA60/name=Joe at US Bank
+provisioning_profiles/development/CE1CBD40-AE3D-45D8-A9C1-C1AACA5EFA60/uuid=CE1CBD40-AE3D-45D8-A9C1-C1AACA5EFA60
 provisioning_profiles/development/CE4479B2-6FAD-4EE3-AB9A-32F8E807B7A4/appid=*
 provisioning_profiles/development/CE4479B2-6FAD-4EE3-AB9A-32F8E807B7A4/name=JB Wildcard
 provisioning_profiles/development/CE4479B2-6FAD-4EE3-AB9A-32F8E807B7A4/uuid=CE4479B2-6FAD-4EE3-AB9A-32F8E807B7A4
-provisioning_profiles/development/D50274C2-41D3-4040-A33E-F966246ACBFA/appid=*
-provisioning_profiles/development/D50274C2-41D3-4040-A33E-F966246ACBFA/name=iOS Team Provisioning Profile\: iOS Wildcard App ID
-provisioning_profiles/development/D50274C2-41D3-4040-A33E-F966246ACBFA/uuid=D50274C2-41D3-4040-A33E-F966246ACBFA
+provisioning_profiles/development/D7E96BFA-C1FC-473F-8E1D-E06333BA9E9D/appid=*
+provisioning_profiles/development/D7E96BFA-C1FC-473F-8E1D-E06333BA9E9D/name=JB Wildcard
+provisioning_profiles/development/D7E96BFA-C1FC-473F-8E1D-E06333BA9E9D/uuid=D7E96BFA-C1FC-473F-8E1D-E06333BA9E9D
+provisioning_profiles/development/DA0530A5-86E2-40F7-B0B5-B82908881D7C/appid=*
+provisioning_profiles/development/DA0530A5-86E2-40F7-B0B5-B82908881D7C/name=iOS Team Provisioning Profile\: *
+provisioning_profiles/development/DA0530A5-86E2-40F7-B0B5-B82908881D7C/uuid=DA0530A5-86E2-40F7-B0B5-B82908881D7C
+provisioning_profiles/development/DD06B2EA-60A0-43E5-9BE4-C3CAC9F02E7D/appid=*
+provisioning_profiles/development/DD06B2EA-60A0-43E5-9BE4-C3CAC9F02E7D/name=iOS Team Provisioning Profile\: *
+provisioning_profiles/development/DD06B2EA-60A0-43E5-9BE4-C3CAC9F02E7D/uuid=DD06B2EA-60A0-43E5-9BE4-C3CAC9F02E7D
+provisioning_profiles/development/E1BF2633-8665-4516-9065-90EB01D04307/appid=*
+provisioning_profiles/development/E1BF2633-8665-4516-9065-90EB01D04307/name=iOS Team Provisioning Profile\: *
+provisioning_profiles/development/E1BF2633-8665-4516-9065-90EB01D04307/uuid=E1BF2633-8665-4516-9065-90EB01D04307
+provisioning_profiles/development/F6AC19A3-0AAF-4E57-B99B-9DF3F8B01F6E/appid=com.mmmobileapps.matchbook
+provisioning_profiles/development/F6AC19A3-0AAF-4E57-B99B-9DF3F8B01F6E/name=Matchbook Dev
+provisioning_profiles/development/F6AC19A3-0AAF-4E57-B99B-9DF3F8B01F6E/uuid=F6AC19A3-0AAF-4E57-B99B-9DF3F8B01F6E
+provisioning_profiles/development/FC0069CA-D5B2-4B9E-8619-568B2D055910/appid=*
+provisioning_profiles/development/FC0069CA-D5B2-4B9E-8619-568B2D055910/name=JB Wildcard
+provisioning_profiles/development/FC0069CA-D5B2-4B9E-8619-568B2D055910/uuid=FC0069CA-D5B2-4B9E-8619-568B2D055910
 provisioning_profiles/development/FCCA77B3-1F23-4316-846B-E5EEAF500927/appid=*
 provisioning_profiles/development/FCCA77B3-1F23-4316-846B-E5EEAF500927/name=iOS Team Provisioning Profile\: iOS Wildcard App ID
 provisioning_profiles/development/FCCA77B3-1F23-4316-846B-E5EEAF500927/uuid=FCCA77B3-1F23-4316-846B-E5EEAF500927
