--- a/.settings/com.appcelerator.titanium.mobile.prefs
+++ b/.settings/com.appcelerator.titanium.mobile.prefs
@@ -9,9 +9,9 @@ android/recent_output=
 android/sdk_version=Android 4.2.2
 eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=true
-iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=parmavision
+iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=ArView Example App
 iosLaunchConfigurationAttributes/appid=com.beuckman.arview.example
 iosLaunchConfigurationAttributes/certificate=Joseph Beuckman (J556MHK866)
 iosLaunchConfigurationAttributes/keychain=
 iosLaunchConfigurationAttributes/sdk_version=6.1
-iosLaunchConfigurationAttributes/uuid=CE4479B2-6FAD-4EE3-AB9A-32F8E807B7A4
+iosLaunchConfigurationAttributes/uuid=11EFBAED-B51D-46E5-A987-B860BA44FF8C
