updated simpler example

--- a/.settings/com.appcelerator.titanium.core.prefs
+++ b/.settings/com.appcelerator.titanium.core.prefs
@@ -32,6 +32,9 @@ provisioning_profiles/adhoc/85D33360-E462-4F5D-923D-B3A3F6722CC3/uuid=85D33360-E
 provisioning_profiles/adhoc/989753B2-4E5F-4004-B2B1-98886FC50AF9/appid=com.beuckman.busdata
 provisioning_profiles/adhoc/989753B2-4E5F-4004-B2B1-98886FC50AF9/name=Bus Data Distro
 provisioning_profiles/adhoc/989753B2-4E5F-4004-B2B1-98886FC50AF9/uuid=989753B2-4E5F-4004-B2B1-98886FC50AF9
+provisioning_profiles/adhoc/B289F817-623A-4414-B6F7-E867791484FA/appid=com.beuckman.arview.example
+provisioning_profiles/adhoc/B289F817-623A-4414-B6F7-E867791484FA/name=ArView Demo Ad Hoc
+provisioning_profiles/adhoc/B289F817-623A-4414-B6F7-E867791484FA/uuid=B289F817-623A-4414-B6F7-E867791484FA
 provisioning_profiles/adhoc/D9D16518-BACC-4A38-975C-D094B3D7997A/appid=com.beuckman.busdata
 provisioning_profiles/adhoc/D9D16518-BACC-4A38-975C-D094B3D7997A/name=Bus Data Ad Hoc
 provisioning_profiles/adhoc/D9D16518-BACC-4A38-975C-D094B3D7997A/uuid=D9D16518-BACC-4A38-975C-D094B3D7997A
