--- a/.settings/com.appcelerator.titanium.mobile.prefs
+++ b/.settings/com.appcelerator.titanium.mobile.prefs
@@ -11,7 +11,9 @@ eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=true
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=ArView Example App
 iosLaunchConfigurationAttributes/appid=com.beuckman.arview.example
-iosLaunchConfigurationAttributes/certificate=Joseph Beuckman (J556MHK866)
+iosLaunchConfigurationAttributes/certificate=Joseph Beuckman
+iosLaunchConfigurationAttributes/distribute_path=/Users/joebeuckman/Desktop
 iosLaunchConfigurationAttributes/keychain=
+iosLaunchConfigurationAttributes/output_format=ipa
 iosLaunchConfigurationAttributes/sdk_version=6.1
-iosLaunchConfigurationAttributes/uuid=11EFBAED-B51D-46E5-A987-B860BA44FF8C
+iosLaunchConfigurationAttributes/uuid=B289F817-623A-4414-B6F7-E867791484FA
