updated arview widget version

--- a/.settings/com.appcelerator.titanium.mobile.prefs
+++ b/.settings/com.appcelerator.titanium.mobile.prefs
@@ -9,11 +9,11 @@ android/recent_output=
 android/sdk_version=Android 4.2.2
 eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=true
-iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=ArView Example App
+iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=ArView-Example-App
 iosLaunchConfigurationAttributes/appid=com.beuckman.arview.example
-iosLaunchConfigurationAttributes/certificate=Joseph Beuckman
+iosLaunchConfigurationAttributes/certificate=Joseph Beuckman (J556MHK866)
 iosLaunchConfigurationAttributes/distribute_path=/Users/joebeuckman/Desktop
 iosLaunchConfigurationAttributes/keychain=
 iosLaunchConfigurationAttributes/output_format=ipa
-iosLaunchConfigurationAttributes/sdk_version=6.1
-iosLaunchConfigurationAttributes/uuid=B289F817-623A-4414-B6F7-E867791484FA
+iosLaunchConfigurationAttributes/sdk_version=7.0
+iosLaunchConfigurationAttributes/uuid=4E4E8D59-486D-4835-9BC1-7A8E4CB3F762
